--- a/coinbase.html
+++ b/coinbase.html
@@ -9,10 +9,23 @@
 </head>
 <body>
     <div class="content">
-        <h1>COIN BASE SYSTEM</h1>
+        <h1 class="text-center">COIN BASE SYSTEM</h1>
         <form action="" class="col-md-6 offset-md-3 col-10 offset-1">
-            <input type="text" placeholder="Enter the amount to change" class="form-control">
+            <div class="col-10 offset-1">
+                <input type="text" placeholder="Enter the amount to change" class="form-control col-12 col-md-8 " id="amount">
+            </div><br><br>
+            <div id="change" class="col-12 col-md-4 offset-md-4"></div>
+            <br><br>
+            <div class="col-8 offset-2">
+                <button class="btn btn-primary col-12" id="click">Change</button>
+            </div>
         </form>
     </div>
+    <br><br>
+    <div class="col-10 offset-1 col-md-4 offset-md-4">
+        <a href="./index.html">Return to my portfolio</a>
+    </div>
+
+    <script src="coinbase.js" type="text/JavaScript"></script>
 </body>
 </html>
