Styling my coin base system project

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                         <!-- My title -->
                         SOFTWARE ENGINEER | SYSTEM AND NETWORK ADMINISTRATOR | CYBERSECURITY | Office 365 ADMINISTRATOR
                     </div>
-                    
+                    <br><br>
                     <div class="button">
                         <!-- Button -->
-                    <button>CONTACT ME</button>
+                    <button class="btn">CONTACT ME</button>
                 </div>
                 </div>
                 <div id="picture-of-me">
