--- a/coinbase.html
+++ b/coinbase.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style2.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="content">
+    <br><br><br>
+    <div class="content border col-12 col-md-8 offset-md-2" id="content">
         <h1 class="text-center">COIN BASE SYSTEM</h1>
+        <br><br>
         <form action="" class="col-md-6 offset-md-3 col-10 offset-1">
             <div class="col-10 offset-1">
                 <input type="text" placeholder="Enter the amount to change" class="form-control col-12 col-md-8 " id="amount">
@@ -20,11 +23,13 @@
                 <button class="btn btn-primary col-12" id="click">Change</button>
             </div>
         </form>
+        <br><br>
+        <div class="col-10 offset-1 col-md-4 offset-md-4">
+            <a href="./index.html">Return to my portfolio</a>
+        </div>
+        <br><br>
     </div>
-    <br><br>
-    <div class="col-10 offset-1 col-md-4 offset-md-4">
-        <a href="./index.html">Return to my portfolio</a>
-    </div>
+    
 
     <script src="coinbase.js" type="text/JavaScript"></script>
 </body>
