Last modification on 4 May 2024

--- a/coinbase.html
+++ b/coinbase.html
@@ -20,7 +20,7 @@
             <div id="change" class="col-12 col-md-4 offset-md-4"></div>
             <br><br>
             <div class="col-8 offset-2">
-                <button class="btn btn-primary col-12" id="click">Change</button>
+                <button class="btn btn-primary col-12 fs-2" id="click">Change</button>
             </div>
         </form>
         <br><br>
