Final working project

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="./skills.html" rel="noopener noreferrer" alt="Go to my skills page">SKILLS</a></li>
                         <li>CURRICULUM</li>
                         <li><a href="#about">ABOUT ME</a></li>
-                        <li><a href="./coinbase.html" alt="Coin base system">PROJECTS</a></li>
+                        <li><a href="./coinbase.html" alt="Coin base system">COIN PROJECT</a></li>
                 </menu>
                 <div id="hamburger">
                     <img src="images/hamburger.png" alt="Menu pour mobile">
