--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,7 @@
                         <li><a href="./skills.html" alt="Let's go to my skills page">SKILLS</a></li>
                         <li>CURRICULUM</li>
                         <li><a href="./index.html#about">ABOUT ME</a></li>
-                        <li>MY BLOG</li>
+                        <li><a href="./coinbase.html" alt="Coin base system">COIN PROJECT</a></li>
                 </menu>
                 <div id="hamburger">
                     <img src="images/hamburger.png" alt="Menu pour mobile">
